@@ -1,3 +1,8 @@
+2014-11-02  Carl Hetherington  <cth@carlh.net>
+
+	* Be more tolerant of some FFmpeg audio decoding errors;
+	should fix #352.
+
 2014-10-26  Carl Hetherington  <cth@carlh.net>
 
 	* Version 1.76.7 released.
